--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@capacitor/android": "^3.3.3",
     "@capacitor/core": "3.0.0",
+    "@capacitor/push-notifications": "^1.0.7",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/splash-screen": "^5.36.0",
+    "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
