--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@capacitor/android": "^3.3.3",
     "@capacitor/core": "3.0.0",
     "@capacitor/push-notifications": "^1.0.7",
+    "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "ngx-qrcode2": "^9.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
